# Youtube_Note_Taker

./: README.md  config.ini  pyproject.toml
backend/: api.py  llm.py  main.py  prompt.py
backend/prompts/: summarizer.txt
frontend/: chat.py
src/: llm.py  prompt.py
